# pyAVReader

./: .gitignore  LICENSE  README.md  __init__.py  config.ini  ffmpeg.py  index.html  setup.cfg  test_ffmpeg.py
.github/workflows/: build.yml  doc.yml  docs.yml
avreader/: __init__.py  load.py  utils.py  write.py
docs/: conf.py  index.rst
docs/_static/js/: sphinx_rtd_versions.js
docs/modules/: ffmpeg.rst  ffmpeg.rst_old  load.rst  utils.rst  write.rst
docs/notes/: install.rst
ffmpeg/: __init__.py  conf.py  load.py  path.py  utils.py  write.py
latest/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
latest/_sources/: index.rst.txt
latest/_sources/modules/: avreader.rst.txt
latest/_static/: documentation_options.js
latest/_static/css/: custom.css
latest/_static/js/: sphinx_rtd_versions.js
latest/modules/: avreader.html  utils.html
latest/notes/: install.html  tutorial.html
tests/: test_load.py  test_utils.py  test_write.py
