[metadata]
name = ffmpeg
version = attr: ffmpeg._version.__version__
author = Benjamin Chamand
author_email = benjamin.chamand@irit.fr
description = A FFmpeg wrapper to quickly load and write multimedia file
long_description = file: README.md
long_description_content_type = test/markdown
keywords = ffmpeg, pytorch
licence = MIT
licence_file = LICENCE
platform = any
url = https://github.com/bchamand/test

[options]
zip_safe = true
include_package_data = true
python_requires = >= 3.6
packages = find:
install_requires =
    torch

[options.extras_require]
test =
    pytest
docs =
    sphinx
    sphinx_rtd_theme
    recommonmark

[options.packages.find]
exclude =
    tests
    docs

# [options.package_data]
