[metadata]
name = avreader
version = 0.1.0-dev0
author = Benjamin Chamand
author_email = benjamin.chamand@irit.fr
description = A FFmpeg wrapper to quickly load and write multimedia file
long_description = file: README.md
long_description_content_type = test/markdown
keywords = ffmpeg, pytorch
licence = MIT
licence_file = LICENCE
platforms = any

[options]
zip_safe = false
packages = find:
include_package_data = false
python_requires = >= 3.6
install_requires =
    torch

[options.extras_require]
tests =
    pytest
docs =
    sphinx
    sphinx_rtd_theme
    recommonmark

[options.packages.find]
exclude =
    tests
    docs
