[metadata]
name = avreader
version = 0.1.0-dev0
author = Benjamin Chamand
author_email = benjamin.chamand@irit.fr
description = A FFmpeg wrapper to quickly load and write multimedia file with PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
keywords = ffmpeg, pytorch
license = MIT
license_file = LICENSE
platforms = any

[options]
zip_safe = true
packages = find:
include_package_data = false
python_requires = >= 3.6
install_requires =
    torch

[options.extras_require]
tests =
    pytest
docs =
    sphinx
    sphinx_rtd_theme

[options.packages.find]
exclude =
    docs
    tests
